# rivet

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PRODUCT.md  README.md  RELEASE_NOTES_v0.3.4.md  SECURITY.md  USER_GUIDE.md  USER_TEST_PLAN.md  book.toml  docker-compose.yaml  rivet.yaml  rivet_github_issues_v3.md  rivet_github_issues_v4.md  rivet_roadmap.md  rivet_roadmap_v3.md  stabilisation_plan.md
.cargo/: audit.toml  config.toml  mutants.toml
.claude/: settings.json
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  nightly-live.yml  nightly.yml  release.yml
benches/: hot_paths.rs  resource_aware.rs
demo/: demo_pipeline.yaml  demo_pipeline_mysql.yaml  setup_demo_tables.sql  setup_demo_tables_mysql.sql
dev/: CRASH_MATRIX.md  USER_TEST_PLAN.md  _uat_time_window.yaml  bench.sh  bench_chunked_p2.yaml  bench_chunked_p4.yaml  bench_chunked_p4_safe.yaml  bench_chunked_seq.yaml  bench_gcs_memory.yaml  mysql_degraded.yaml  mysql_incremental.yaml  mysql_incremental_coalesce.yaml  mysql_safe.yaml  mysql_type_matrix_export.yaml  mysql_type_matrix_full_export.yaml  mysql_worst_case.yaml  optimization-backlog-validation.md  pg_degraded.yaml  pg_full.yaml  pg_incremental.yaml  pg_incremental_coalesce.yaml  pg_safe.yaml  pg_type_matrix_export.yaml  pg_type_matrix_full_export.yaml  pg_worst_case.yaml  regenerate_docker_init_configs.sh  rivet_gcs_fake_test.yaml  rivet_gcs_rivet_data_test.yaml  rivet_s3_minio_test.yaml  run_gcs_export.sh  run_gcs_fake_export.sh  run_s3_export.sh  run_uat_smoke.sh  sparse_chunk_demo.yaml  sweep-test-cruft.sh  test_file_split.yaml  test_live.sh  test_memory_batch.yaml  test_meta_columns.yaml  test_params.yaml  (+6 more)
dev/bench/: .gitignore  batch_throughput_ab.sh  cdc_churn.sql  harm_ab.sh  run_bench.sh  seed_bench_mssql.sql  seed_bench_mysql.sql  seed_bench_pg.sql  smoke.py
dev/bigquery/: type_matrix_bigquery.md
dev/cdc/: README.md  harm.py  harm_heavy.py  harm_mongo.py  harm_mssql.py  harm_mysql.py  mysql-grant.sql  perf.sh  primary-hba.sh  replica-grant.sql  replica-primary-init.sql  stand.sh
dev/cdc_interval/: README.md  baseline_mem.sh  run.sh  run_pg.sh  soak_all.sh
dev/cfg_matrix/: README.md  check_msg.sh  expected_msg.txt  gen_fixtures.sh  matrix.sh
dev/cli_matrix/: README.md  check_msg.sh  check_rc.sh  expected_msg.txt  expected_rc.txt  matrix.sh  seed.sh
dev/clickhouse/: user_files.xml
dev/cloud/: rivet_gcs_fake_test.yaml  rivet_gcs_rivet_data_test.yaml  rivet_s3_minio_test.yaml  run_gcs_export.sh  run_gcs_fake_export.sh  run_s3_export.sh
dev/correctness/: verify_export.py
dev/cross_version_matrix/: README.md  check_cross.sh  matrix.sh  seed_all.sh
dev/docgen/: config_md.py  expand_includes.py  generate.sh
dev/e2e/: mysql_e2e.yaml  pg_e2e.yaml  pg_gcs_e2e.yaml  pg_recovery_e2e.yaml  pg_s3_e2e.yaml  run_e2e.sh  seed_mysql.sql  seed_pg.sql
dev/fixtures/: test_compression.yaml  test_mysql_noaccess.yaml  test_mysql_partial.yaml  test_params.yaml  test_pg_noaccess.yaml  test_pg_partial.yaml  test_pg_wrongpass.yaml  test_quality.yaml  test_stdout.yaml  test_toxiproxy_pg.yaml
dev/legacy/: mysql_legacy.yaml  pg_legacy.yaml  run_full_matrix.sh  run_legacy.sh
dev/matrices/: README.md  run.sh  setup_links.sh
dev/mongo/: init-auth.js
docs/: README.md  SUMMARY.md  _config.yml  architecture.md  behaviour-matrix.yaml  benchmark_report_v0.5.x.md  cdc-bigquery-load.md  cdc-matrix.yaml  cdc-seq-ordering.md  cdc-type-fidelity-matrix.yaml  chunking-matrix.yaml  cloud-auth.md  cloud-destinations.md  cloud-permissions.md  cloud-smoke-tests.md  concepts.md  config-validation-matrix.yaml  cross-config-matrix.yaml  csv-fidelity-matrix.yaml  durability-ordering-matrix.yaml  fail-loud-matrix.yaml  fuzz-matrix.yaml  getting-started.md  index.md  load-mode-matrix.yaml  mutants-baseline.txt  mutation-plan.md  partitioning.md  perf-matrix.yaml  release-checklist.md  reliability-matrix.md  resilience-matrix.yaml  runner-coverage-matrix.yaml  semantics.md  type-fidelity-matrix.yaml  type-mapping.md  url-safety-matrix.yaml  warehouse-load-matrix.yaml  who-is-this-for.md
examples/: README.md  mysql_full_azure_sas.yaml  mysql_full_local.yaml  mysql_incremental_local.yaml  pg_chunked_s3.yaml  pg_date_chunked_local.yaml  pg_full_azure_sas.yaml  pg_full_local.yaml  pg_incremental_local.yaml  pg_partitioned_gcs.yaml  pg_time_window_gcs.yaml  rivet.yaml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: config_from_yaml.rs  mongo_resume_token.rs  pg_test_decoding.rs
fuzz/seeds/config_from_yaml/: seed1
fuzz/seeds/mongo_resume_token/: seed1
fuzz/seeds/pg_test_decoding/: seed1
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
schemas/: rivet.schema.json
scripts/: soak_cdc.sh
src/: config.rs  enrich.rs  error.rs  fuzz.rs  journal.rs  lib.rs  main.rs  manifest.rs  mcp.rs  notify.rs  pipeline.rs  preflight.rs  quality.rs  redact.rs  resource.rs  scalar.rs  sql.rs  state.rs  test_hook.rs  tuning.rs
tests/: artifact_legacy_compat.rs  audit_cli_dispatch.rs  audit_cloud_multipart.rs  audit_column_validation.rs  audit_doctor_fastfail.rs  audit_doctor_probe.rs  audit_init_deferred.rs  audit_maxfile.rs  audit_observability.rs  audit_plan_apply.rs  audit_preflight_table.rs  audit_repair.rs  audit_repair_chunk_index.rs  audit_rerun.rs  audit_state.rs  audit_target_typo.rs  audit_validate_warning_label.rs  batch_memory_policy.rs  cdc_conformance_gate.rs  chunked_sparse_ids.rs  cli_contract.rs  compat_gate.rs  config_fuzz.rs  config_parse_errors.rs  config_secrets.rs  examples_parse.rs  format_fuzz.rs  format_golden.rs  gremlin.rs  invariants.rs  journal_invariants.rs  live_azure_multipart.rs  live_catalog_hints.rs  live_cdc.rs  live_cdc_mssql.rs  live_cdc_oracle.rs  live_cdc_property.rs  live_cdc_replica.rs  live_chaos.rs  live_chunked_dense.rs  (+73 more)
(+807 files in other folders)
