[package]
name = "rivet-cli"
version = "0.5.2"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/panchenkoai/rivet"
description = "Rivet: PostgreSQL/MySQL → Parquet/CSV (local, S3, GCS). Crate name rivet-cli; binary rivet."
readme = "README.md"
default-run = "rivet"
exclude = ["dev/", "USER_TEST_PLAN.md", "tests/", ".github/"]

[lib]
name = "rivet"
path = "src/lib.rs"

[[bin]]
name = "rivet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow = { version = "58", features = ["chrono-tz"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
mysql = "28"
opendal = { version = "0.55", features = ["blocking", "services-fs", "services-s3", "services-gcs"] }
parquet = { version = "58", features = ["arrow", "zstd", "lz4", "flate2"] }
clap_complete = "4"
postgres = {
    version = "0.19",
    features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"],
}
postgres-native-tls = "0.5"
# `vendored` statically links OpenSSL on Linux so `cargo install rivet-cli` works
# on bare systems and our cross-compiled aarch64-unknown-linux-gnu release
# builds don't need `libssl-dev`. On macOS `native-tls` uses the system
# `SecureTransport` framework and the `vendored` flag is a no-op — no OpenSSL
# is ever compiled or linked there.
native-tls = { version = "0.2", features = ["vendored"] }
rand = "0.10"
postgres-types = {
    version = "0.2",
    features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"],
}
bigdecimal = "0.4"
byteorder = "1"
uuid = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tempfile = "3"
tikv-jemallocator = { version = "0.6", optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
reqsign = "0.16"
# reqwest 0.12 is the version reqsign 0.16 uses; aliased here so we can pass a
# Client to AwsDefaultLoader without triggering a cross-version type mismatch.
reqwest-012 = { package = "reqwest", version = "0.12", default-features = false, features = ["json"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
indicatif = "0.18"
console = "0.16"
atoi = "2"
simdutf8 = "0.1"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[dev-dependencies]
bytes = "1"
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false

[[bench]]
name = "resource_aware"
harness = false

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
